<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity__login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="@drawable/bg_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arabic.app.Activity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@color/material_green_900"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/white"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditText">

                    <EditText
                        android:id="@+id/edt_reg_fullname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reg_name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditText">

                    <EditText
                        android:id="@+id/edt_reg_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="ایمیل"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditText">

                    <EditText
                        android:id="@+id/edt_reg_pass"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditText">

                    <EditText
                        android:id="@+id/edt_reg_conf_pass"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reg_confirmPass"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tv_register_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:onClick="registerOnClicks"
                    android:paddingTop="5dp"
                    android:text="@string/already_registered"
                    android:textColor="#000"
                    tools:ignore="OnClick" />

                <Spinner
                    android:id="@+id/sp_register_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"/>

                <Button
                    android:id="@+id/btn_register_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="@color/material_green_900"
                    android:onClick="registerOnClicks"
                    android:text="@string/btn_register_main"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:ignore="OnClick" />


            </LinearLayout>


            </ScrollView>

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
